# anqclaw

./: .gitignore  README.md  README_zh.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
agent/: .gitignore  Cargo.toml  config.toml  config.toml.bak  代码清理与优化分析.md
agent/src/: audit.rs  config.rs  gateway.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  paths.rs  scheduler.rs  session.rs  skill.rs  token.rs  types.rs
agent/src/agent/: context.rs  mod.rs  probe.rs  prompt.rs  redact.rs  skill_match.rs  token_budget.rs  util.rs
agent/src/channel/: cli.rs  http.rs  mod.rs
agent/src/channel/feishu/: api.rs  mod.rs  types.rs  ws.rs
agent/src/cli/: config_cmd.rs  mod.rs  onboard.rs  session_cmd.rs
agent/src/config/: defaults.rs  mod.rs  sections.rs
agent/src/llm/: anthropic.rs  mod.rs  openai_compat.rs  retry.rs
agent/src/memory/: mod.rs  schema.sql
agent/src/tool/: custom.rs  error_classifier.rs  file.rs  image_info.rs  memory_tool.rs  mod.rs  model_tool.rs  pdf_read.rs  shell.rs  skill_tool.rs  tokenize.rs  web.rs
agent/src/tool/shell/: permission.rs
agent/tests/: concurrent_test.rs  integration_test.rs
agent/workspace/: AGENTS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
docs/: 2026-03-24-anqclaw-v1-design.md  2026-03-26-file-extraction-design.md  2026-03-27-anqclaw-code-review.md  autonomous-capability-chain-design.md  design.md
docs/superpowers/plans/: 2026-03-24-anq-agent-v1-plan.md  2026-03-24-anq-agent-v1-progress.md  2026-03-24-anqclaw-v1-plan.md  2026-03-24-anqclaw-v1-progress.md  2026-03-25-anqclaw-v2-plan.md  2026-03-26-autonomous-capability-chain-plan.md  2026-03-26-autonomous-capability-chain-progress.md
docs/superpowers/specs/: 2026-03-24-anqclaw-v1-design.md  (+1 more)
