[package]
name = "anqclaw"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
secrecy = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
lru = "0.13"
futures = "0.3"
futures-util = "0.3"
prost = "0.13"
dirs = "6"
cron = "0.15"
dialoguer = "0.11"
url = "2"
axum = "0.8"
